--- a/src/html/style.css
+++ b/src/html/style.css
@@ -20,7 +20,7 @@
         --bg-color-error: rgb(255, 236, 248);
         --accent-color-0: rgb(110, 93, 198);
         --accent-color-1: rgb(94, 77, 178);
-        --accent-color-2: rgb(130,112,219);
+        --accent-color-2: rgb(130, 112, 219);
     }
 }
 
